{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 465,
  "lineage": "047480c8-ee02-69e5-3d5e-6e2e878fc2aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03427460c3f05353c",
            "domain": "vpc",
            "id": "eipalloc-03427460c3f05353c",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-5-51.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.5.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kv-bootcamp-eip"
            },
            "tags_all": {
              "Name": "kv-bootcamp-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:489455091964:internet-gateway/igw-035792424c6bb4351",
            "id": "igw-035792424c6bb4351",
            "owner_id": "489455091964",
            "tags": {
              "Name": "kv-bootcamp-igw"
            },
            "tags_all": {
              "Name": "kv-bootcamp-igw"
            },
            "vpc_id": "vpc-0b8d9346588290c93"
          },
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aws_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03427460c3f05353c",
            "connectivity_type": "public",
            "id": "nat-03ed315ae95a32986",
            "network_interface_id": "eni-0db312bbfb364411c",
            "private_ip": "192.168.30.108",
            "public_ip": "3.6.5.51",
            "subnet_id": "subnet-0b81abce2548240a0",
            "tags": {
              "Name": "kv-bootcamp-nat"
            },
            "tags_all": {
              "Name": "kv-bootcamp-nat"
            }
          },
          "dependencies": [
            "aws_eip.aws_nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_entry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bd8dabc7256b5c091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03ed315ae95a32986",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.aws_nat_eip",
            "aws_nat_gateway.aws_nat",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route_entry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-035792424c6bb4351",
            "id": "r-rtb-03ded0d82e1fce50f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws_ig",
            "aws_route_table.public_route_table",
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:489455091964:route-table/rtb-0bd8dabc7256b5c09",
            "id": "rtb-0bd8dabc7256b5c09",
            "owner_id": "489455091964",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "kv-bootcamp-private_route"
            },
            "tags_all": {
              "Name": "kv-bootcamp-private_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d9346588290c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:489455091964:route-table/rtb-03ded0d82e1fce50f",
            "id": "rtb-03ded0d82e1fce50f",
            "owner_id": "489455091964",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "kv-bootcamp-public_route"
            },
            "tags_all": {
              "Name": "kv-bootcamp-public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d9346588290c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b680549a8d5247b",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "subnet_id": "subnet-03b3479cc65056d13"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b6a42a6b56b5519",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "subnet_id": "subnet-0b982c72cb81b27eb"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ea45b4f92c05c39",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "subnet_id": "subnet-0ab8cdbde69cb974e"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b680549a8d5247b",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "subnet_id": "subnet-03b3479cc65056d13"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b6a42a6b56b5519",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "subnet_id": "subnet-0b982c72cb81b27eb"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ea45b4f92c05c39",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "subnet_id": "subnet-0ab8cdbde69cb974e"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b680549a8d5247b",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "subnet_id": "subnet-03b3479cc65056d13"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b6a42a6b56b5519",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "subnet_id": "subnet-0b982c72cb81b27eb"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ea45b4f92c05c39",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "subnet_id": "subnet-0ab8cdbde69cb974e"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b680549a8d5247b",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "subnet_id": "subnet-03b3479cc65056d13"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b6a42a6b56b5519",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "subnet_id": "subnet-0b982c72cb81b27eb"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ea45b4f92c05c39",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "subnet_id": "subnet-0ab8cdbde69cb974e"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b680549a8d5247b",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "subnet_id": "subnet-03b3479cc65056d13"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b6a42a6b56b5519",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "subnet_id": "subnet-0b982c72cb81b27eb"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ea45b4f92c05c39",
            "route_table_id": "rtb-0bd8dabc7256b5c09",
            "subnet_id": "subnet-0ab8cdbde69cb974e"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b20472f4a6782432",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "subnet_id": "subnet-0b81abce2548240a0"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0bcf5b1b8efb252",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "subnet_id": "subnet-0d9723339c2ad0b11"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8afaedca1525d28",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "subnet_id": "subnet-098474a4da7f94557"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b20472f4a6782432",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "subnet_id": "subnet-0b81abce2548240a0"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0bcf5b1b8efb252",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "subnet_id": "subnet-0d9723339c2ad0b11"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8afaedca1525d28",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "subnet_id": "subnet-098474a4da7f94557"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b20472f4a6782432",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "subnet_id": "subnet-0b81abce2548240a0"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0bcf5b1b8efb252",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "subnet_id": "subnet-0d9723339c2ad0b11"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8afaedca1525d28",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "subnet_id": "subnet-098474a4da7f94557"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b20472f4a6782432",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "subnet_id": "subnet-0b81abce2548240a0"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0bcf5b1b8efb252",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "subnet_id": "subnet-0d9723339c2ad0b11"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8afaedca1525d28",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "subnet_id": "subnet-098474a4da7f94557"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b20472f4a6782432",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "subnet_id": "subnet-0b81abce2548240a0"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0bcf5b1b8efb252",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "subnet_id": "subnet-0d9723339c2ad0b11"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8afaedca1525d28",
            "route_table_id": "rtb-03ded0d82e1fce50f",
            "subnet_id": "subnet-098474a4da7f94557"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "traffic_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:489455091964:security-group/sg-05965b1e51b9bda51",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05965b1e51b9bda51",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.37.199.174/32"
                ],
                "description": "traffic in",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "49.37.199.174/32"
                ],
                "description": "traffic in",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220818050319117000000006",
            "name_prefix": "terraform-",
            "owner_id": "489455091964",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kv-bootcamp-securitygroup"
            },
            "tags_all": {
              "Name": "kv-bootcamp-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d9346588290c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.newvpc",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:489455091964:subnet/subnet-03b3479cc65056d13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b3479cc65056d13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489455091964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kv-bootcamp-private_subnet-0"
            },
            "tags_all": {
              "Name": "kv-bootcamp-private_subnet-0"
            },
            "vpc_id": "vpc-0b8d9346588290c93"
          },
          "dependencies": [
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:489455091964:subnet/subnet-0b982c72cb81b27eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b982c72cb81b27eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489455091964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kv-bootcamp-private_subnet-1"
            },
            "tags_all": {
              "Name": "kv-bootcamp-private_subnet-1"
            },
            "vpc_id": "vpc-0b8d9346588290c93"
          },
          "dependencies": [
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:489455091964:subnet/subnet-0ab8cdbde69cb974e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "192.168.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab8cdbde69cb974e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489455091964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kv-bootcamp-private_subnet-2"
            },
            "tags_all": {
              "Name": "kv-bootcamp-private_subnet-2"
            },
            "vpc_id": "vpc-0b8d9346588290c93"
          },
          "dependencies": [
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:489455091964:subnet/subnet-0b81abce2548240a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b81abce2548240a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489455091964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kv-bootcamp-public_subnet-0"
            },
            "tags_all": {
              "Name": "kv-bootcamp-public_subnet-0"
            },
            "vpc_id": "vpc-0b8d9346588290c93"
          },
          "dependencies": [
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:489455091964:subnet/subnet-0d9723339c2ad0b11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.31.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9723339c2ad0b11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489455091964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kv-bootcamp-public_subnet-1"
            },
            "tags_all": {
              "Name": "kv-bootcamp-public_subnet-1"
            },
            "vpc_id": "vpc-0b8d9346588290c93"
          },
          "dependencies": [
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:489455091964:subnet/subnet-098474a4da7f94557",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "192.168.32.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098474a4da7f94557",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489455091964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kv-bootcamp-public_subnet-2"
            },
            "tags_all": {
              "Name": "kv-bootcamp-public_subnet-2"
            },
            "vpc_id": "vpc-0b8d9346588290c93"
          },
          "dependencies": [
            "aws_vpc.newvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "newvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:489455091964:vpc/vpc-0b8d9346588290c93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-021f7bd7c3d4ba2e5",
            "default_route_table_id": "rtb-0114fc3bf8b7f656f",
            "default_security_group_id": "sg-0326953d86be4c129",
            "dhcp_options_id": "dopt-07dedd4958503c9db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b8d9346588290c93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0114fc3bf8b7f656f",
            "owner_id": "489455091964",
            "tags": {
              "Name": "kv-bootcamp-vpc"
            },
            "tags_all": {
              "Name": "kv-bootcamp-vpc"
            }
          }
        }
      ]
    }
  ]
}